<resources>
    <string name="app_name">Sales and Purchase Order</string>
    <array name="menuItens">
        <item>Customer</item>
        <item>Product</item>
        <item>Sales Order</item>
        <item>Purchase Order</item>
        <item>Financials</item>
    </array>
    <string name="mainMenu">Main Menu</string>
    <string name="customers">Customers</string>
    <string name="products">Products</string>
    <string name="loading">Loading...</string>
    <string name="label_id">ID</string>
    <string name="customer_detail_title">Customer Detail</string>
    <string name="product_detail_title">Product Detail</string>
    <string name="sales_order_detail_title">Sales Order Detail</string>
    <string name="purchase_order_detail_title">Purchase Order Detail</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="cpf">CPF</string>
    <string name="telephoneNumber">Telephone Number</string>
    <string name="address">Address</string>

    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="unitsInStock">Units in Stock</string>

    <string name="create_customer_title">Enter Customer Data:</string>
    <string name="customer_create_success">Customer created successfully</string>
    <string name="create_customer">Create Customer</string>
    <string name="salesOrders">Sales Orders</string>
    <string name="purchaseOrders">Purchase Orders</string>

    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="total">Total</string>
    <string name="customerId">ID do Customer</string>
    <string name="items">Items</string>
    <string name="header">Header</string>
    <string name="financials">Financials</string>
    <string name="sums_to_receive">Sums to Receive</string>
    <string name="sums_to_pay">Sums to Pay</string>
    <string name="balance">Balance</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="total_to_receive">Total to Receive</string>
</resources>
