<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.brunaks.finalproject_salesorder.CreateCustomerActivity">

    <TextView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/create_customer_title"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/addCustomerName"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_below="@id/layout"/>
    <EditText
        android:id="@+id/addCustomerCpf"
        android:hint="@string/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/addCustomerName"/>
    <EditText
        android:id="@+id/addCustomerPhone"
        android:hint="@string/telephoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_below="@id/addCustomerCpf"/>
    <EditText
        android:id="@+id/addCustomerAddress"
        android:hint="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textImeMultiLine"
        android:layout_below="@id/addCustomerPhone"/>
    <Button
        android:id="@+id/create_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_customer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="10dp"/>
</RelativeLayout>
