<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainFinancialsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/financialsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/financials"
        android:textSize="25sp"
        android:textColor="#000099"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/totalToReceiveTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_to_receive"
        android:textSize="20sp"
        android:textColor="#000099"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/totalToReceive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/totalToPayTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_to_pay"
        android:textSize="20sp"
        android:textColor="#000099"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/totalToPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/balanceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="20sp"
        android:textColor="#000099"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/showSumsToReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/showSumsToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_delete"
        android:tint="@android:color/white"/>

</RelativeLayout>
